manifests/02a-web-allow-all.yaml
# Recipe 02a: ALLOW all traffic to an application (app=web)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - {}
