manifests/05-web-allow-all-namespaces.yaml
# Recipe 05: ALLOW traffic from all namespaces to app=web
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all-namespaces
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector: {}
