manifests/08-web-allow-external.yaml
# Recipe 08: ALLOW traffic from external clients (and all internal)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from: []
