manifests/deny-from-other-namespaces.yaml
# Recipe 04: DENY traffic from other namespaces (same-namespace only)
# Set metadata.namespace to the namespace you want to protect.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: default
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
